--- a/src/css/common-style.css
+++ b/src/css/common-style.css
@@ -128,3 +128,15 @@ img {
 	border: 1px solid rgba(17, 17, 17, 0.1);
 	color: var(--DARK);
 }
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    /* animacje na potem */
+    /* transition-property: opacity, visibility;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
+}
