--- a/src/css/common-style.css
+++ b/src/css/common-style.css
@@ -53,12 +53,13 @@ img {
 @media screen and (min-width: 375px) {
 	.container {
 		max-width: 375px;
-		margin: 0 auto;
+        padding: 0 20px;
 	}
 }
 @media screen and (min-width: 768px) {
 	.container {
 		max-width: 768px;
+        padding: 0 32px;
 	}
 }
 @media screen and (min-width: 1200px) {
