--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,1 +1,226 @@
 /* oprócz klasy .header pozostałe style rozpoczynają się od .head- */
+
+.header-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.nav-container {
+    display: flex;
+    align-items: center;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    color: var(--DARK);
+    font-size: 14px;
+    font-style: italic;
+    font-weight: 700;
+    line-height: 1.3;
+    letter-spacing: -0.42px;
+    text-transform: uppercase;
+}
+
+.modal-button {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background-color: transparent;
+    border: none;
+}
+
+/* ========== MOBILE ========== */
+@media screen and (max-width: 767px) {
+
+    .js-open-menu {
+        border: none;
+        background-color: transparent;
+        display: flex;
+        padding: 20px 0;
+    }
+
+    .js-menu-container {
+        background-color: var(--DARK-BKG);
+        z-index: 999;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        transform: translateX(100%);
+        transition: transform 250ms ease-in-out;
+    }
+
+    .js-menu-container.is-open {
+        transform: translateX(0);
+    }
+
+    .nav-links-mobile {
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+        margin-top: 136px;
+        margin-left: 50px;
+    }
+
+    .nav-links-mobile .link {
+        color: var(--WHITE);
+        font-weight: 500;
+        line-height: 1.14;
+    }
+
+    .social-media-container-mobile {
+        margin-left: 20px;
+        margin-bottom: 20px;
+    }
+
+    .social-media-links-mobile {
+        display: flex;
+        gap: 18px;
+    }
+
+    .li-social-media-mobile {
+        flex-basis: calc((100% - 18) / 2);
+    }
+
+    .social-media-svg-mobile {
+        fill: var(--WHITE);
+    }
+}
+
+/* ========== TABLET ========== */
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .hamburger-svg {
+        width: 32px;
+        height: 32px;
+    }
+
+    .js-open-menu {
+        border: none;
+        background-color: transparent;
+        display: flex;
+        padding: 20px 0;
+    }
+
+    .js-menu-container {
+        background-color: var(--DARK-BKG);
+        z-index: 999;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        transform: translateX(100%);
+        transition: transform 250ms ease-in-out;
+    }
+
+    .js-menu-container.is-open {
+        transform: translateX(0);
+    }
+
+    .nav-links-mobile {
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+        margin-top: 156px;
+        margin-left: 85px;
+    }
+
+    .nav-links-mobile .link {
+        color: var(--WHITE);
+        font-weight: 500;
+        line-height: 1.14;
+    }
+
+    .social-media-container-mobile {
+        margin-left: 32px;
+        margin-bottom: 24px;
+    }
+
+    .social-media-links-mobile {
+        display: flex;
+        gap: 18px;
+    }
+
+    .li-social-media-mobile {
+        flex-basis: calc((100% - 18) / 2);
+    }
+
+    .social-media-svg-mobile {
+        width: 24px;
+        height: 24px;
+        fill: var(--WHITE);
+    }
+}
+
+/* ========== NON DESKTOP ========== */
+@media screen and (max-width: 1199px) {
+    .nav-links {
+        display: none;
+    }
+
+    .social-media-container {
+        display: none;
+    }
+}
+
+/* ========== DESKTOP ========== */
+@media screen and (min-width: 1200px) {
+
+    .js-open-menu {
+        display: none;
+    }
+
+    .mobile-menu {
+        display: none;
+    }
+
+    .logo {
+        margin-right: 188px;
+        font-size: 18px;
+        line-height: 1.11;
+        letter-spacing: -0.54px;
+    }
+
+    .logo-svg {
+        width: 24px;
+        height: 24px;
+    }
+
+    .nav-links {
+        display: flex;
+        gap: 24px;
+    }
+
+    .nav-links .link {
+        color: #111;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 1.14;
+        letter-spacing: -0.28px;
+    }
+
+    .social-media-container {
+        padding: 24px 0;
+    }
+
+    .social-media-links {
+        display: flex;
+        gap: 18px;
+    }
+
+    .li-social-media {
+        flex-basis: calc((100% - 18px) / 2);
+    }
+
+    .social-media-icon {
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
+    }
+
+    .social-media-svg:hover,
+    .social-media-svg:focus {
+        fill: var(--ACCENT);
+    }
+}
