--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,79 @@
 <header class="header">
-    
-</header>
+            <div class="container header-container">
+                <nav class="nav-container">
+                    <a href="./index.html" class="logo link">Simply Chocolate
+                        <span>
+                            <svg width="21" height="21" class="logo-svg">
+                                <use href="./images/icons.svg#bitten-chocolate"></use>
+                            </svg>
+                        </span>
+                    </a>
+                    <ul class="nav-links list">
+                        <li><a href="./index.html" class="link">Home</a></li>
+                        <li><a href="#" class="link">How it's made?</a></li>
+                        <li><a href="#" class="link">Our products</a></li>
+                        <li><a href="#" class="link">Top sellers</a></li>
+                        <li><a href="#" class="link">Chocolate is loved</a></li>
+                    </ul>
+                </nav>
+                <div class="social-media-container">
+                    <ul class="list social-media-links">
+                        <li class="li-social-media">
+                            <a href="#" class="link">
+                                <svg width="24" height="24" class="social-media-svg">
+                                    <use href="./images/icons.svg#instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="li-social-media">
+                            <a href="#" class="link">
+                                <svg width="24" height="24" class="social-media-svg">
+                                    <use href="./images/icons.svg#twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <button class="js-open-menu" type="button">
+                    <svg width="28" height="28">
+                        <use href="./images/icons.svg#menu-toggle"></use>
+                    </svg>
+                </button>
+            </div>
+        </header>
+        
+        <!------------- MENU TOGGLE ------------->
+        <div class="mobile-menu js-menu-container">
+            <button type="button" class="js-close-menu modal-button">
+                <svg width="28" height="28">
+                    <use href="./images/icons.svg#x-close"></use>
+                </svg>
+            </button>
+            <nav class="nav-container">
+                <ul class="nav-links-mobile list">
+                    <li><a href="./index.html" class="link">Home</a></li>
+                    <li><a href="#" class="link">How it's made?</a></li>
+                    <li><a href="#" class="link">Our products</a></li>
+                    <li><a href="#" class="link">Top sellers</a></li>
+                    <li><a href="#" class="link">Chocolate is loved</a></li>
+                </ul>
+            </nav>
+            <div class="social-media-container-mobile">
+                <ul class="list social-media-links-mobile">
+                    <li class="li-social-media-mobile">
+                        <a href="#" class="link">
+                            <svg width="22" height="22" class="social-media-svg-mobile">
+                                <use href="./images/icons.svg#instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="li-social-media-mobile">
+                        <a href="#" class="link">
+                            <svg width="20" height="20" class="social-media-svg-mobile">
+                                <use href="./images/icons.svg#twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
