--- a/src/css/header.css
+++ b/src/css/header.css
@@ -3,19 +3,19 @@
 .header-container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
-.nav-container {
+.header-nav-container {
     display: flex;
     align-items: center;
 }
 
-.logo {
+.header-logo {
     display: flex;
     align-items: center;
     gap: 4px;
     color: var(--DARK);
-    font-size: 14px;
     font-style: italic;
     font-weight: 700;
     line-height: 1.3;
@@ -23,7 +23,9 @@
     text-transform: uppercase;
 }
 
-.modal-button {
+/* =============mobile menu============= */
+
+.header-modal-button {
     position: absolute;
     top: 20px;
     right: 20px;
@@ -31,137 +33,120 @@
     border: none;
 }
 
+.header-nav-container-mobile {
+    margin-top: 136px;
+    margin-left: 50px;
+    margin-bottom: auto;
+}
+
+.header-nav-links-mobile {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.header-nav-links-mobile .link {
+    color: var(--WHITE);
+    font-weight: 500;
+    line-height: 1.14;
+}
+
+.header-social-media-svg-mobile {
+    fill: var(--WHITE);
+}
+
+.header-social-media-links,
+.header-social-media-links-mobile {
+    display: flex;
+    gap: 18px;
+}
+
+.js-open-menu {
+    border: none;
+    background-color: transparent;
+}
+
+.js-menu-container {
+    background-color: var(--DARK-BKG);
+    z-index: 999;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+    display: flex;
+    flex-direction: column;
+}
+
+.js-menu-container.is-open {
+    transform: translateX(0);
+}
+
+/* ------------------------------------------------------ */
+
+@media screen and (min-width: 375px) {
+    .container {
+        width: 375px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        width: 768px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .container {
+        width: 1200px;
+    }
+}
+
 /* ========== MOBILE ========== */
 @media screen and (max-width: 767px) {
-
-    .js-open-menu {
-        border: none;
-        background-color: transparent;
-        display: flex;
-        padding: 20px 0;
+    .header-container {
+        padding-top: 20px;
+        padding-bottom: 14px;
     }
 
-    .js-menu-container {
-        background-color: var(--DARK-BKG);
-        z-index: 999;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        transform: translateX(100%);
-        transition: transform 250ms ease-in-out;
-    }
-
-    .js-menu-container.is-open {
-        transform: translateX(0);
-    }
-
-    .nav-links-mobile {
-        display: flex;
-        flex-direction: column;
-        gap: 24px;
-        margin-top: 136px;
-        margin-left: 50px;
-    }
-
-    .nav-links-mobile .link {
-        color: var(--WHITE);
-        font-weight: 500;
-        line-height: 1.14;
-    }
-
-    .social-media-container-mobile {
+    .header-social-media-container-mobile {
         margin-left: 20px;
         margin-bottom: 20px;
-    }
-
-    .social-media-links-mobile {
-        display: flex;
-        gap: 18px;
-    }
-
-    .li-social-media-mobile {
-        flex-basis: calc((100% - 18) / 2);
-    }
-
-    .social-media-svg-mobile {
-        fill: var(--WHITE);
     }
 }
 
 /* ========== TABLET ========== */
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-    .hamburger-svg {
+    .header-container {
+        padding-top: 24px;
+        padding-bottom: 24px;
+    }
+
+    .header-hamburger {
         width: 32px;
         height: 32px;
     }
 
-    .js-open-menu {
-        border: none;
-        background-color: transparent;
-        display: flex;
-        padding: 20px 0;
-    }
-
-    .js-menu-container {
-        background-color: var(--DARK-BKG);
-        z-index: 999;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        transform: translateX(100%);
-        transition: transform 250ms ease-in-out;
-    }
-
-    .js-menu-container.is-open {
-        transform: translateX(0);
-    }
-
-    .nav-links-mobile {
-        display: flex;
-        flex-direction: column;
-        gap: 24px;
-        margin-top: 156px;
-        margin-left: 85px;
-    }
-
-    .nav-links-mobile .link {
-        color: var(--WHITE);
-        font-weight: 500;
-        line-height: 1.14;
-    }
-
-    .social-media-container-mobile {
+    .header-social-media-container-mobile {
         margin-left: 32px;
         margin-bottom: 24px;
     }
 
-    .social-media-links-mobile {
-        display: flex;
-        gap: 18px;
-    }
-
-    .li-social-media-mobile {
-        flex-basis: calc((100% - 18) / 2);
-    }
-
-    .social-media-svg-mobile {
+    .header-social-media-svg-mobile {
         width: 24px;
         height: 24px;
-        fill: var(--WHITE);
     }
 }
 
 /* ========== NON DESKTOP ========== */
 @media screen and (max-width: 1199px) {
-    .nav-links {
+    .header-nav-links {
         display: none;
     }
 
-    .social-media-container {
+    .header-social-media-container {
         display: none;
     }
 }
@@ -173,54 +158,45 @@
         display: none;
     }
 
-    .mobile-menu {
+    .header-mobile-menu {
         display: none;
     }
 
-    .logo {
+    .header-container {
+        padding-top: 24px;
+        padding-bottom: 32px;
+    }
+
+    .header-logo {
         margin-right: 188px;
         font-size: 18px;
         line-height: 1.11;
         letter-spacing: -0.54px;
     }
 
-    .logo-svg {
+    .header-logo-svg {
         width: 24px;
         height: 24px;
     }
 
-    .nav-links {
+    .header-nav-links {
         display: flex;
         gap: 24px;
     }
 
-    .nav-links .link {
+    .header-nav-links .link {
         color: #111;
-        font-size: 14px;
         font-weight: 500;
         line-height: 1.14;
         letter-spacing: -0.28px;
-    }
-
-    .social-media-container {
-        padding: 24px 0;
-    }
-
-    .social-media-links {
-        display: flex;
-        gap: 18px;
-    }
-
-    .li-social-media {
-        flex-basis: calc((100% - 18px) / 2);
     }
 
     .social-media-icon {
         transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
     }
 
-    .social-media-svg:hover,
-    .social-media-svg:focus {
+    .header-social-media-svg:hover,
+    .header-social-media-svg:focus {
         fill: var(--ACCENT);
     }
 }
