--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,1 +1,93 @@
 /* oprócz klasy .footer pozostałe style rozpoczynają się od .foot- */
+.footer {
+  background-color: var(--DARK-BKG);
+}
+.foot-header {
+  color: var(--WHITE);
+  font-family: Montserrat;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: -0.48px;
+  padding-top: 32px;
+  max-width: 300px;
+}
+.foot-header-span {
+  color: var(--ACCENT);
+}
+.foot-contact-paragraph {
+  color: var(--WHITE);
+  font-family: Montserrat;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.3;
+  margin-top: 32px;
+}
+.foot-address-list {
+  flex-direction: column;
+  gap: 4px;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.3;
+  letter-spacing: -0.28px;
+  margin-top: 14px;
+  margin-bottom: 32px;
+}
+
+.foot-address-link {
+  color: var(--WHITE);
+}
+.foot-nav-link {
+  color: var(--WHITE);
+  font-family: Montserrat;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.1;
+  letter-spacing: -0.28px;
+}
+.foot-nav-list {
+  flex-direction: column;
+  gap: 16px;
+  padding: 32px 0;
+}
+.foot-line {
+  border-color: rgba(255, 255, 255, 0.1);
+}
+
+.foot-social-media-list {
+  display: flex;
+  gap: 14px;
+  margin-top: 32px;
+}
+.foot-contact-div {
+  display: flex;
+  justify-content: space-between;
+}
+.foot-social-svg {
+  fill: var(--WHITE);
+}
+
+@media screen and (min-width: 768px) {
+  .foot-top-div {
+    display: flex;
+    justify-content: space-between;
+  }
+  .foot-nav-list {
+    flex-direction: row;
+    gap: 24px;
+    padding: 24px 0 50px 0;
+  }
+  .foot-social-media-list {
+    gap: 18px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .foot-social-media-list {
+    gap: 18px;
+  }
+}
