--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -50,7 +50,7 @@
         <a class="link foot-nav-link" href="#Our-products">Our products</a>
       </li>
       <li>
-        <a class="link foot-nav-link" href="Top-sellers">Top sellers</a>
+        <a class="link foot-nav-link" href="#Top-sellers">Top sellers</a>
       </li>
       <li>
         <a class="link foot-nav-link" href="#Chocolate-is-loved">Chocolate is loved</a>
