Update footer - anchor

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -42,7 +42,7 @@
     </div>
     <hr class="foot-line" />
     <ul class="foot-nav-list list">
-      <li><a class="link foot-nav-link" href="#Home">Home</a></li>
+      <li><a class="link foot-nav-link" href="./index.html">Home</a></li>
       <li>
         <a class="link foot-nav-link" href="#How-its-made">How it’s made?</a>
       </li>
