--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,9 +1,9 @@
 <footer class="footer">
   <div class="container">
     <div class="foot-top-div">
-      <h1 class="foot-header">
-        <span class="foot-header-span">Chocolate</span> a delicious cure for a bad day
-      </h1>
+      <h2 class="foot-header">
+        <span class="accent">Chocolate</span> a delicious cure for a bad day
+      </h2>
       <div class="foot-contact-div">
         <div>
           <p class="foot-contact-paragraph">Contact us</p>
@@ -24,7 +24,7 @@
           <ul class="foot-social-media-list">
             <li class="foot-social-icon list">
               <a class="link foot-social-link" href="">
-                <svg class="foot-social-svg" width="16" height="16">
+                <svg class="foot-social-svg" width="" height="">
                   <use href="./images/icons.svg#instagram" />
                 </svg>
               </a>
