--- a/src/css/modal-buy.css
+++ b/src/css/modal-buy.css
@@ -1,1 +1,30 @@
 /* oprócz klasy .modal-buy pozostałe style rozpoczynają się od .mod-buy- */
+.modal-buy {
+    background-color: var(--LIGHT-BKG);
+    width: 100%;
+    height: 994px;
+    margin: 0 auto;
+    padding: 32px 24px;
+    border-radius: 15px;
+}
+.mod-buy-title {
+    display: block;
+    color: var(--DARK);
+    text-align: center;
+    text-transform: uppercase;
+}
+@media screen and (min-width: 375px) {
+    .modal-buy {
+       width: 311px;
+    }
+}
+@media screen and (min-width: 768px) {
+    .modal-buy {
+        width: 609px;
+        height: 1058px;
+        padding: 48px;
+    }
+}
+@media screen and (min-width: 1200px) {
+    
+}
