update common elements

--- a/src/partials/modal-buy.html
+++ b/src/partials/modal-buy.html
@@ -1,5 +1,5 @@
 <!-- element zamykający to okno musi mieć parametr data-modal-buy-close -->
-<div class="modal" data-modal-buy><!-- <div class="modal is-hidden" data-modal-buy></div> -->
+<div class="modal is-hidden" data-modal-buy><!-- <div class="modal is-hidden" data-modal-buy></div> -->
     <div class="modal-buy">
         <h2 class="section-title mod-buy-title"><span class="accent">Buy</span> now</h2>
         <form class="mod-buy-form" name="form-buy-now">
