--- a/src/css/common-style.css
+++ b/src/css/common-style.css
@@ -75,6 +75,7 @@ img {
 	color: var(--ACCENT);
 }
 .section-title {
+    display: block;
     text-align: center;
     text-transform: uppercase;
     font-size: 20px;
