--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -52,10 +52,10 @@
     <nav class="header-nav-container-mobile">
         <ul class="header-nav-links-mobile list">
             <li><a href="./index.html" class="link">Home</a></li>
-            <li><a href="#" class="link">How it's made?</a></li>
-            <li><a href="#" class="link">Our products</a></li>
-            <li><a href="#" class="link">Top sellers</a></li>
-            <li><a href="#" class="link">Chocolate is loved</a></li>
+            <li><a href="#How-its-made" class="link">How it's made?</a></li>
+            <li><a href="#Our-products" class="link">Our products</a></li>
+            <li><a href="#Top-sellers" class="link">Top sellers</a></li>
+            <li><a href="#Chocolate-is-loved" class="link">Chocolate is loved</a></li>
         </ul>
     </nav>
     <div class="header-social-media-container-mobile">
