toggle-menu.html

--- a/src/partials/toggle-menu.html
+++ b/src/partials/toggle-menu.html
@@ -1,4 +1,35 @@
-<!-- element zamykający to okno musi mieć klasę js-close-menu -->
-<div class="toggle-menu js-menu-container" id="mobile-menu">
-    
+<!------------- MENU TOGGLE ------------->
+<div class="header-mobile-menu js-menu-container" id="mobile-menu">
+    <button type="button" class="js-close-menu header-modal-button">
+        <svg width="28" height="28">
+            <use href="./images/icons.svg#x-close"></use>
+        </svg>
+    </button>
+    <nav class="header-nav-container-mobile">
+        <ul class="header-nav-links-mobile list">
+            <li><a href="./index.html" class="link">Home</a></li>
+            <li><a href="#How-its-made" class="link">How it's made?</a></li>
+            <li><a href="#Our-products" class="link">Our products</a></li>
+            <li><a href="#Top-sellers" class="link">Top sellers</a></li>
+            <li><a href="#Chocolate-is-loved" class="link">Chocolate is loved</a></li>
+        </ul>
+    </nav>
+    <div class="header-social-media-container-mobile">
+        <ul class="list header-social-media-links-mobile">
+            <li>
+                <a href="#" class="link">
+                    <svg width="22" height="22" class="header-social-media-svg-mobile">
+                        <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li>
+                <a href="#" class="link">
+                    <svg width="20" height="20" class="header-social-media-svg-mobile">
+                        <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </div>
 </div>
