--- a/src/partials/toggle-menu.html
+++ b/src/partials/toggle-menu.html
@@ -1,7 +1,7 @@
 <!------------- MENU TOGGLE ------------->
 <div class="header-mobile-menu js-menu-container" id="mobile-menu">
     <button type="button" class="js-close-menu header-modal-button">
-        <svg width="28" height="28">
+        <svg width="28" height="28" class="header-hamburger">
             <use href="./images/icons.svg#x-close"></use>
         </svg>
     </button>
