--- a/src/partials/modal-buy.html
+++ b/src/partials/modal-buy.html
@@ -73,7 +73,7 @@
                 <button class="btn send clear-style" type="submit">Submit</button>
             </div>
         </form>
-        <button type="button" class="btn clear-style close-order" data-modal-buy-close>
+        <button type="button" class="btn clear-style mod-buy-close" data-modal-buy-close>
             <svg class="svg-close-order" width="28" height="28">
                 <use href="./images/icons.svg#x-close"></use>
             </svg>
