--- a/src/partials/top-sellers.html
+++ b/src/partials/top-sellers.html
@@ -1,3 +1,66 @@
-<section class="top-sellers">
-
+<section class="top-sellers container">
+  <h2 class="section-title">
+    <a name="Top-sellers" class="link"><span class="accent">TOP</span> SELLERS</a>
+  </h2>
+  <div class="top-content-div">
+    <ul class="top-list">
+      <li class="top-li">
+        <img
+          class="top-images"
+          srcset="
+            ./images/top-sellers/des-coffee-dark-chocolate-368x464.jpg    1x,
+            ./images/top-sellers/des-coffee-dark-chocolate-368x464@2x.jpg 2x,
+            ./images/top-sellers/tab-coffee-dark-chocolate-344x464.jpg    1x,
+            ./images/top-sellers/tab-coffee-dark-chocolate-344x464@2x.jpg 2x,
+            ./images/top-sellers/mob-coffee-dark-chocolate-335x464.jpg    1x,
+            ./images/top-sellers/mob-coffee-dark-chocolate-335x464@2x.jpg 2x
+          "
+          src="./images/top-sellers/des-coffee-dark-chocolate-368x464.jpg"
+          width="100%"
+          height="100%"
+          alt="nuts, chockolate and coffee beans"
+        />
+        <p class="top-paragraph">
+          Crazy enough chocolate originates from a bean just like the coffee bean called Cacao.
+          Cacao has been around for thousands of years and was first discovered by the Native
+          American tribe called the Mayans.
+        </p>
+      </li>
+      <li class="top-li">
+        <img
+          class="top-images"
+          srcset="
+            ./images/top-sellers/des-fruits-hazelnuts-milk-chocolate-368x464.jpg    1x,
+            ./images/top-sellers/des-fruits-hazelnuts-milk-chocolate-368x464@2x.jpg 2x,
+            ./images/top-sellers/tab-fruits-hazelnuts-milk-chocolate-344x464.jpg    1x,
+            ./images/top-sellers/tab-fruits-hazelnuts-milk-chocolate-344x464@2x.jpg 2x,
+            ./images/top-sellers/mob-fruits-hazelnuts-milk-chocolate-335x464.jpg    1x,
+            ./images/top-sellers/mob-fruits-hazelnuts-milk-chocolate-335x464@2x.jpg 2x
+          "
+          src="./images/top-sellers/des-fruits-hazelnuts-milk-chocolate-368x464.jpg"
+          width="100%"
+          height="100%"
+          alt="chockolate with almonds"
+        />
+      </li>
+      <li>
+        <img
+          class="top-images top-last-photo"
+          srcset="
+            ./images/top-sellers/des-chocolate-bars-368x464.jpg    1x,
+            ./images/top-sellers/des-chocolate-bars-368x464@2x.jpg 2x
+          "
+          src="./images/top-sellers/des-chocolate-bars-368x464.jpg"
+          width="100%"
+          height="100%"
+          alt="different type of chocolate"
+        />
+      </li>
+    </ul>
+    <div class="top-button-div">
+      <button data-modal-buy2-open class="btn btn-accent btn-41 top-button" type="button">
+        Buy now
+      </button>
+    </div>
+  </div>
 </section>
