--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,1 +1,338 @@
 /* style rozpoczynają się od .hero- */
+:root {
+  --white: #ffffff;
+  --body: #111111;
+  --yelow: #fd9222;
+  --iris: #4d5ae5;
+  --ocean: #404bbf;
+  --cloud: #f4f4fd;
+  --studio: #2e2f42;
+  --cornflower: #e7e9fc;
+  --footcolor: #31d0aa;
+  --modalcolor: #fcfcfc;
+  --placeholder: #2e2f4266;
+  --lightslate: #8e8f99;
+  --color-neutral-dark: #303030;
+  --tr-fn: cubic-bezier(0.4, 0, 0.2, 1);
+  --tr-duration: 250ms;
+}
+.hero-icon-tablet {
+  display: block;
+}
+.hero-icon-mobile {
+  display: none;
+}
+.hero-body {
+  font-family: 'Montserrat', sans-serif;
+  background-color: var(--white);
+  color: var(--body);
+}
+.hero-visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+/* ================================================= MOBILE 👇 ========================================= */
+@media screen and (max-width: 767px) {
+  .hero-background {
+    display: block;
+    padding: 395px 0 21px;
+    background-image: url(../images/hero/mob-hero-335x621@1x.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    margin: 50px 20px;
+    border-radius: 30px;
+  }
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero-background {
+      display: block;
+      padding: 395px 0 21px;
+      background-image: url(../images/hero/mob-hero-335x621@2x.jpg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      margin: 50px 20px;
+      border-radius: 30px;
+    }
+  }
+  .hero-container {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    max-width: 1170px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .hero-text {
+    color: var(--white);
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    max-width: 310px;
+  }
+  .hero-button-margin {
+    margin-right: 14px;
+  }
+  .hero-button {
+    padding: 12px 28px;
+    color: var(--white);
+    background-color: transparent;
+    border: 1px solid var(--white);
+    font-weight: 600;
+    font-size: 14px;
+    letter-spacing: 0.04em;
+    line-height: 1.5;
+    border-radius: 100px;
+    transition: background-color;
+    transition-duration: var(--tr-duration);
+    transition-timing-function: var(--tr-fn);
+  }
+  .hero-button:hover,
+  .hero-button:focus {
+    background-color: var(--yelow);
+    cursor: pointer;
+  }
+  @media screen and (max-width: 391px) {
+    .hero-button {
+      padding: 10px 25px;
+      margin-bottom: 14px;
+      color: var(--white);
+      background-color: transparent;
+      border: 1px solid var(--white);
+      font-weight: 600;
+      font-size: 14px;
+      letter-spacing: 0.04em;
+      line-height: 1.5;
+      border-radius: 100px;
+      transition: background-color;
+      transition-duration: var(--tr-duration);
+      transition-timing-function: var(--tr-fn);
+    }
+  }
+  .hero-scroll {
+    padding-top: 22px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 12px;
+  }
+  .hero-scroll-text {
+    color: var(--white);
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    max-width: 310px;
+  }
+  .hero-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    fill: var(--white);
+    background-color: var(--white);
+    border: 1px solid var(--white);
+    padding: 0;
+    cursor: pointer;
+    transition: background-color;
+    transition-timing-function: var(--tr-fn);
+    transition-duration: var(--tr-duration);
+  }
+  .hero-icon:hover,
+  .hero-icon:focus {
+    background-color: transparent;
+    cursor: pointer;
+  }
+  .hero-icon:hover,
+  .hero-icon:focus .hero-icon-trans {
+    fill: var(--white);
+  }
+  .hero-icon-trans {
+    fill: var(--yelow);
+    transition: fill;
+    transition-timing-function: var(--tr-fn);
+    transition-duration: var(--tr-duration);
+  }
+}
+/* ================================================= TABLET 👇 ========================================= */
+@media screen and (min-width: 768px) {
+  .hero-background {
+    display: block;
+    padding: 395px 0 21px;
+    background-image: url(../images/hero/tab-hero-704x890@1x.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    margin: 50px 20px;
+    border-radius: 30px;
+  }
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero-background {
+      display: block;
+      padding: 395px 0 21px;
+      background-image: url(../images/hero/tab-hero-704x890@2x.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      margin: 50px 20px;
+      border-radius: 30px;
+    }
+  }
+  .hero-icon-tablet {
+    display: none;
+  }
+  .hero-icon-mobile {
+    display: block;
+  }
+  .hero-container {
+    max-width: 1170px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .hero-tablet {
+    display: flex;
+    justify-content: space-between;
+  }
+  .hero-text {
+    padding-bottom: 32px;
+    color: var(--white);
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 1.07;
+    letter-spacing: 0.03em;
+    max-width: 484px;
+  }
+  .hero-button-margin {
+    margin-right: 14px;
+  }
+  .hero-button {
+    padding: 12px 28px;
+    color: var(--white);
+    background-color: transparent;
+    border: 1px solid var(--white);
+    font-weight: 600;
+    font-size: 14px;
+    letter-spacing: 0.04em;
+    line-height: 1.5;
+    border-radius: 100px;
+    transition: background-color;
+    transition-duration: var(--tr-duration);
+    transition-timing-function: var(--tr-fn);
+  }
+  .hero-button:hover,
+  .hero-button:focus {
+    background-color: var(--yelow);
+    cursor: pointer;
+  }
+  @media screen and (max-width: 391px) {
+    .hero-button {
+      padding: 10px 25px;
+      margin-bottom: 14px;
+      color: var(--white);
+      background-color: transparent;
+      border: 1px solid var(--white);
+      font-weight: 600;
+      font-size: 14px;
+      letter-spacing: 0.04em;
+      line-height: 1.5;
+      border-radius: 100px;
+      transition: background-color;
+      transition-duration: var(--tr-duration);
+      transition-timing-function: var(--tr-fn);
+    }
+  }
+  .hero-scroll {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 14px;
+  }
+  .hero-scroll-text {
+    color: var(--white);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    max-width: 310px;
+  }
+  .hero-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 38px;
+    height: 38px;
+    border-radius: 50%;
+    fill: var(--white);
+    background-color: var(--white);
+    border: 1px solid var(--white);
+    padding: 0;
+    cursor: pointer;
+    transition: background-color;
+    transition-timing-function: var(--tr-fn);
+    transition-duration: var(--tr-duration);
+  }
+  .hero-icon:hover,
+  .hero-icon:focus {
+    background-color: transparent;
+    cursor: pointer;
+  }
+  .hero-icon:hover,
+  .hero-icon:focus .hero-icon-trans {
+    fill: var(--white);
+  }
+  .hero-icon-trans {
+    fill: var(--yelow);
+    transition: fill;
+    transition-timing-function: var(--tr-fn);
+    transition-duration: var(--tr-duration);
+  }
+}
+/* ================================================= DESKTOP 👇 ========================================= */
+@media screen and (min-width: 1158px) {
+  .hero-background {
+    display: block;
+    padding: 395px 0 21px;
+    background-image: url(../images/hero/des-hero-1136x600@1x.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    margin: 50px 20px;
+    border-radius: 30px;
+  }
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero-background {
+      display: block;
+      padding: 395px 0 21px;
+      background-image: url(../images/hero/des-hero-1136x600@2x.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      margin: 50px 20px;
+      border-radius: 30px;
+    }
+  }
+}
