--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -48,7 +48,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    margin: 50px 20px;
+    margin: 0 20px 50px;
     border-radius: 30px;
   }
   @media (min-device-pixel-ratio: 2),
@@ -179,7 +179,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    margin: 50px 20px;
+    margin: 0 20px 50px;
     border-radius: 30px;
   }
   @media (min-device-pixel-ratio: 2),
@@ -317,7 +317,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    margin: 50px 20px;
+    margin: 0 20px 50px;
     border-radius: 30px;
   }
   @media (min-device-pixel-ratio: 2),
