--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -1,13 +1,13 @@
-<section id="how-its-made" class="how-its-made-section">
+<section id="how-its-made" class="how-section">
   <div class="container how-container">
     <h2 class="section-title how-title">HOW IT'S <span class="accent">MADE?</span></h2>
     <div class="how-content">
-      <iframe class="how-box-video"
+    <!--<iframe class="how-box-video"
         class="h-i-m-video"
         src="https://www.youtube.com/embed/_5ja7UNHZpo?start=23&fs=0&modestbranding=1&controls=2&showinfo=0"
         title="YouTube video player"
         frameborder="0">
-      </iframe>
+      </iframe>-->
       <picture>
         <img src="./images/how-its-made/des-how-its-made-600x400.jpg"/>
         <svg class="how-icon" width="44" height="44">
@@ -27,4 +27,44 @@
     </div>
   </div>
 </section>
-
+<!--<section id="how-its-made-section" class="h-i-m-section">
+  <div class="h-i-m-container">
+    <h2 class="h-i-m-title">HOW IT’S<span> MADE?</span></h2>
+    <div class="h-i-m-content">
+      <iframe
+        class="h-i-m-video"
+        src="https://www.youtube.com/embed/_5ja7UNHZpo?start=23&fs=0&modestbranding=1&controls=2&showinfo=0"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
+      <div class="h-i-m-description">
+        <h3 class="h-i-m-recipe-title">
+          Try our chocolates today and <br />
+          discover the perfect balance of flavor
+        </h3>
+        <ul class="h-i-m-list">
+          <li class="h-i-m-text">
+            Heat the milk in a saucepan without bringing it to a boil. Add sugar
+            and cocoa powder.
+          </li>
+          <li class="h-i-m-text">
+            At the same time, prepare a water bath. Melt the butter on it.
+          </li>
+          <li class="h-i-m-text">
+            "Mix" the milk mixture and already liquid butter. Mix thoroughly
+            with a silicone spatula so that the mass becomes uniform and silky.
+          </li>
+          <li class="h-i-m-text">
+            Heat the mixture over low heat, letting it barely boil.
+          </li>
+          <li class="h-i-m-text">
+            Pour the chocolate into special containers (can be replaced with ice
+            molds). Allow to cool and harden.
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>-->
