--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,3 +1,66 @@
 <section class="products">
-
+    <a name="Our-products"></a>
+    <div class="container">
+        <h2 class="section-title">Our <span class="accent">products</span></h2>
+        <div class="prod-box">
+            <ul class="list prod-list">
+                <li class="prod-list-item">
+                    <img class="prod-item-img" src="./images/products/mob-tab-des-orange-dark-chocolate-230x201.jpg"
+                        alt="">
+                    <h3 class="prod-item-title">Orange</h3>
+                    <p class="prod-item-txt">Dark chocolate</p>
+                    <button type="button" class="btn btn-md btn-other prod-item-btn">45 UAH</button>
+                </li>
+                <li class="prod-list-item">
+                    <img class="prod-item-img"
+                        src="./images/products/mob-tab-des-apple-cranberry-milk-chocolate-230x201.jpg" alt="">
+                    <h3 class="prod-item-title">Apple&cranberry</h3>
+                    <p class="prod-item-txt">Milk chocolate</p>
+                    <button type="button" class="btn btn-md btn-other prod-item-btn">50 UAH</button>
+                </li>
+                <li class="prod-list-item">
+                    <img class="prod-item-img"
+                        src="./images/products/mob-tab-des-lime-sea-salt-dark-chocolate-230x201.jpg" alt="">
+                    <h3 class="prod-item-title">Lime&sea salt</h3>
+                    <p class="prod-item-txt">Dark chocolate</p>
+                    <button type="button" class="btn btn-md btn-other prod-item-btn">66 UAH</button>
+                </li>
+                <li class="prod-list-item">
+                    <img class="prod-item-img" src="./images/products/mob-tab-des-pineapple-dark-chocolate-230x201.jpg"
+                        alt="">
+                    <h3 class="prod-item-title">Pineapple</h3>
+                    <p class="prod-item-txt">Dark chocolate</p>
+                    <button type="button" class="btn btn-md btn-other prod-item-btn">54 UAH</button>
+                </li>
+                <li class="prod-list-item">
+                    <img class="prod-item-img" src="./images/products/mob-tab-des-classic-milk-chocolate-230x201.jpg"
+                        alt="">
+                    <h3 class="prod-item-title">Classic</h3>
+                    <p class="prod-item-txt">Milk chocolate</p>
+                    <button type="button" class="btn btn-md btn-other prod-item-btn">45 UAH</button>
+                </li>
+                <li class="prod-list-item">
+                    <img class="prod-item-img" src="./images/products/mob-tab-des-honey-milk-chocolate-230x201.jpg"
+                        alt="">
+                    <h3 class="prod-item-title">Honey</h3>
+                    <p class="prod-item-txt">Milk chocolate</p>
+                    <button type="button" class="btn btn-md btn-other prod-item-btn">50 UAH</button>
+                </li>
+                <li class="prod-list-item">
+                    <img class="prod-item-img"
+                        src="./images/products/mob-tab-des-roasted-fruits-dark-chocolate-230x201.jpg" alt="">
+                    <h3 class="prod-item-title">Roasted-fruits</h3>
+                    <p class="prod-item-txt">Dark chocolate</p>
+                    <button type="button" class="btn btn-md btn-other prod-item-btn">66 UAH</button>
+                </li>
+                <li class="prod-list-item">
+                    <img class="prod-item-img" src="./images/products/mob-tab-des-classic-white-chocolate-230x201.jpg"
+                        alt="">
+                    <h3 class="prod-item-title">Classic</h3>
+                    <p class="prod-item-txt">White chocolate</p>
+                    <button type="button" class="btn btn-md btn-other prod-item-btn">54 UAH</button>
+                </li>
+            </ul>
+        </div>
+    </div>
 </section>
