init section reviews

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,3 +1,57 @@
-<section class="reviews">
-
+<section class="reviews" id="reviews">
+    <a name="Chocolate-is-loved"></a>
+    <div class="container">
+        <h2 class="section-title"><span class="accent">Chocolate</span> is loved</h2>
+        <div class="rev-box">
+            <ul class="list rev-list">
+                <li class="rev-list-item">
+                    <img class="rev-item-img" src="./images/reviews/mob-tab-des-victoria-dobrzhanska.png"
+                        srcset="./images/reviews/mob-tab-des-victoria-dobrzhanska@2x.png 2x" alt="">
+                    <h3 class="rev-item-title">Victoria Dobrzhanska</h3>
+                    <p class="rev-item-txt">I love this chocolate bar. Perfect combination of light crispy
+                        wafer, covered in a thin layer chocolate.</p>
+                </li>
+                <li class="rev-list-item">
+                    <img class="rev-item-img" src="./images/reviews/mob-tab-des-nazar-babenko.png"
+                        srcset="./images/reviews/mob-tab-des-victoria-dobrzhanska@2x.png 2x" alt="">
+                    <h3 class="rev-item-title">Nazar Babenko</h3>
+                    <p class="rev-item-txt">This chocolate confection is a delight! A delight! The wafer is
+                        light and crisp, the hazelnut cream is smooth, and the
+                        chocolate is good.</p>
+                </li>
+                <li class="rev-list-item">
+                    <img class="rev-item-img" src="./images/reviews/mob-tab-des-olena-kampusch.png"
+                        srcset="./images/reviews/mob-tab-des-olena-kampusch@2x.png 2x" alt="">
+                    <h3 class="rev-item-title">Olena Kampusch</h3>
+                    <p class="rev-item-txt">Chocolate is a family favourite treat. Love the delicious smooth
+                        chocolate and the creaminess inside. The wafer is soft
+                        but crunchy.</p>
+                </li>
+                <li class="rev-list-item">
+                    <img class="rev-item-img" src="./images/reviews/mob-tab-des-natalia-sus.png"
+                        srcset="./images/reviews/mob-tab-des-natalia-sus@2x.png 2x" alt="">
+                    <h3 class="rev-item-title">Natalia Sus</h3>
+                    <p class="rev-item-txt">The chocolate assortment was delicious. Both dark and milk
+                        chocolate pieces were smooth and just right on the sweetness
+                        level.</p>
+                </li>
+                <li class="rev-list-item">
+                    <img class="rev-item-img" src="./images/reviews/mob-tab-des-danilo-nottingham.png"
+                        srcset="./images/reviews/mob-tab-des-danilo-nottingham@2x.png 2x" alt="">
+                    <h3 class="rev-item-title">Danilo Nottingham</h3>
+                    <p class="rev-item-txt">This is delicious. It so rich and flavorful you don’t need to
+                        use as many. I love topping an apple with almond butter
+                        and these chips for a snack.</p>
+                </li>
+                <li class="rev-list-item">
+                    <img class="rev-item-img" src="./images/reviews/mob-tab-des-irina-tydnyuk.png"
+                        srcset="./images/reviews/mob-tab-des-irina-tydnyuk@2x.png 2x" alt="">
+                    <h3 class="rev-item-title">Irina Tydnyuk</h3>
+                    <p class="rev-item-txt">This is simply the best chocolate around, and I'm just thrilled
+                        to support a local company! Best local chocolate - world class :)</p>
+                </li>
+            </ul>
+        </div>
+        <button type="button" class="btn btn-xl btn-outln-accent" data-modal-review-open>Leave a review</button>
+    </div>
 </section>
