--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -1,1 +1,62 @@
 /* oprócz klasy .reviews pozostałe style rozpoczynają się od .rev- */
+.reviews>.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+    overflow: hidden;
+}
+.rev-box {
+    align-self: flex-start;
+}
+.rev-list {
+	gap: 16px;
+	overflow: hidden;
+}
+.rev-list-item {
+	position: relative;
+	top: 0;
+	left: 0;
+	display: flex;
+    flex-direction: column;
+	flex-shrink: 0;
+	width: 335px;
+	height: 200px;
+	margin-top: 42px;
+    padding: 56px 18px 42px;
+    background-color: var(--WHITE);
+    border: 1px solid rgba(17, 17, 17, 0.10);
+    border-radius: 15px;
+	text-align: center;
+}
+.rev-item-img {
+    position: absolute;
+    left: 50%;
+    top: 0;
+    transform: translate(-50%, -50%);
+}
+.rev-item-title {
+    display: block;
+    margin-bottom: 24px;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.33; 
+}
+@media screen and (min-width: 768px) {
+    .rev-list-item {
+        width: 344px;
+        padding: 56px 16px 42px;
+    } 
+}
+@media screen and (min-width: 1200px) {
+    .reviews>.container {
+        padding: 0 32px;
+    }
+    .rev-list {
+        gap: 28px;
+    }
+    .rev-list-item {
+        width: 360px;
+        padding: 56px 24px 42px;
+    } 
+}
