--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,6 @@
-<section class="hero-body hero-background">
+<section class="hero-container-first hero-body hero-background">
     <div class="hero-container">
-        <h1 class="hero-visually-hidden">Hidden</h1>
+        <h1 class="hero-visually-hidden">hidden</h1>
         <h2 class="hero-text">Treat yourself or a loved one
             to our finest ingredients for a moment of pure delight!</h2>
         <div class="hero-tablet">
@@ -11,11 +11,8 @@
             <div class="hero-scroll">
                 <p class="hero-scroll-text">scroll down</p>
                 <button type="button" class="hero-icon">
-                    <svg class="hero-icon-trans hero-icon-tablet" width="16" height="16">
-                        <use href="./images/hero/hero-icons.svg#icon-hero-small"></use>
-                    </svg>
-                    <svg class="hero-icon-trans hero-icon-mobile" width="22" height="22">
-                        <use href="./images/hero/hero-icons.svg#icon-hero-big"></use>
+                    <svg class="hero-icon-trans" width="16" height="16">
+                        <use href="./images/icons.svg#scroll-down"></use>
                     </svg>
                 </button>
             </div>
