--- a/src/css/components.css
+++ b/src/css/components.css
@@ -13,8 +13,38 @@
 .comp-images {
     display: flex;
     list-style-type: none;
+    text-align: center;
 }
 .comp-picture {
     border: 1px solid #FD9222;
     border-radius: 15px;
+ }
+.comp-bordered-image {
+    border: 1px solid #FD9222;
+        border-radius: 15px;
+        padding: 19px;
+}
+.comp-picture-chocolate {
+    background-color: #FD9222;
+    border: 1px solid #FD9222;
+    border-radius: 15px;
+}
+.comp-picture-nuts {
+    background-color: #1E1823;
+    border: 1px solid #FD9222;
+    border-radius: 15px;
+}
+.comp-caption {
+    color: #ffffff
+    
+}
+.comp-picture img,
+.comp-picture-nuts img {
+    max-width: 100%;
+    height: auto;
+}
+.comp-images li {
+    margin-right: 19px;
+    display: inline-block;
+    text-align: left;
 }
