--- a/src/partials/components.html
+++ b/src/partials/components.html
@@ -1,31 +1,36 @@
 <section class="components">
-  <h2 class="comp-title">
-    IT ALL ADDS UP TO ONE EXCEPTIONAL<span class="accent"> TASTE</span> SENSATION
-  </h2>
-  <p class="comp-text">
-    At Simply Chocolate, we believe that the secret to exceptional chocolate is in the details. From
-    the sourcing of the finest ingredients to the careful crafting of each individual piece, every
-    step of our process adds up to one exceptional taste sensation.
-  </p>
-  <ul class="comp-images">
-    <li class="comp-picture">
-      <img
-        src="./images/components/des-milk-chocolate-bars-206x160.png"
-        alt="pieces of milk chocolate"
-      />
-      <h3>milk chocolate</h3>
-    </li>
-    <li class="comp-picture">
-      <img src="./images/components/des-bootle-of-milk-206x160.png" alt="bootle of milk" />
-      <h3>milk</h3>
-    </li>
-    <li class="comp-picture">
-      <img src="./images/components/des-hazelnuts-206x160.png" alt="hazelnuts" />
-      <h3>nuts</h3>
-    </li>
-    <li class="comp-picture">
-      <img src="./images/components/mob-tab-chocolate-drops-224x171.png" alt="drops of chocolate" />
-      <h3>semi-sweet chocolate</h3>
-    </li>
-  </ul>
+  <div class="container">
+    <h2 class="comp-title">
+      IT ALL ADDS UP TO ONE EXCEPTIONAL<span class="accent"> TASTE</span> SENSATION
+    </h2>
+    <p class="comp-text">
+      At Simply Chocolate, we believe that the secret to exceptional chocolate is in the details.
+      From the sourcing of the finest ingredients to the careful crafting of each individual piece,
+      every step of our process adds up to one exceptional taste sensation.
+    </p>
+    <ul class="comp-images">
+      <li class="comp-picture-chocolate">
+        <img
+          src="./images/components/des-milk-chocolate-bars-206x160.png"
+          alt="pieces of milk chocolate"
+        />
+        <h5 class="comp-caption">MILK CHOCOLATE</h5>
+      </li>
+      <li class="comp-picture">
+        <img src="./images/components/des-bootle-of-milk-206x160.png" alt="bootle of milk" />
+        <h5>MILK</h5>
+      </li>
+      <li class="comp-picture-nuts">
+        <img src="./images/components/des-hazelnuts-206x160.png" alt="hazelnuts" />
+        <h5 class="comp-caption">NUTS</h5>
+      </li>
+      <li class="comp-picture">
+        <img
+          src="./images/components/mob-tab-chocolate-drops-224x171.png"
+          alt="drops of chocolate"
+        />
+        <h5>SEMI-SWEET CHOCOLATE</h5>
+      </li>
+    </ul>
+  </div>
 </section>
