update section reviews

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -52,6 +52,6 @@
                 </li>
             </ul>
         </div>
-        <button type="button" class="btn btn-xl btn-outln-accent" data-modal-review-open>Leave a review</button>
+        <button type="button" class="btn rev-btn-leave btn-outln-accent" data-modal-review-open>Leave a review</button>
     </div>
 </section>
