--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -5,6 +5,7 @@
     align-items: center;
     gap: 50px;
     overflow: hidden;
+    margin-bottom: 128px;
 }
 .rev-box {
     align-self: flex-start;
@@ -42,11 +43,20 @@
     font-weight: 600;
     line-height: 1.33; 
 }
+.rev-btn-leave {
+    height: 41px;
+	padding: 0 28px;
+	border-radius: 100px;
+}
 @media screen and (min-width: 768px) {
     .rev-list-item {
         width: 344px;
         padding: 56px 16px 42px;
     } 
+    .rev-btn-leave {
+        height: 50px;
+	    padding: 0 40px;
+    }
 }
 @media screen and (min-width: 1200px) {
     .reviews>.container {
