--- a/src/css/modal-review.css
+++ b/src/css/modal-review.css
@@ -1,1 +1,300 @@
-/* oprócz klasy .moda-review pozostałe style rozpoczynają się od .mod-rev- */
+.modal-container-re {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-hidden {
+    pointer-events: none;
+    visibility: hidden;
+    opacity: 0;
+}
+
+.modal-box-re {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: var(--LIGHT-BKG);
+    width: 311px;
+    height: 95%;
+    overflow: auto;
+    padding: 32px 24px;
+    border-radius: 15px;
+    border: 1.5px solid rgba(17, 17, 17, 0.05);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .modal-box-re {
+        width: 517px;
+        height: 95%;
+        overflow: auto;
+        padding: 40px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .modal-box-re {
+        width: 517px;
+        height: 95%;
+        overflow: auto;
+        padding: 40px;
+    }
+}
+
+.modal-button-re {
+    position: absolute;
+    top: 14px;
+    right: 14px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .modal-button-re {
+        top: 24px;
+        right: 24px;
+    }
+
+    .svg-button-re {
+        width: 28px;
+        height: 28px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .modal-button-re {
+        top: 24px;
+        right: 24px;
+    }
+
+    .svg-button-re {
+        width: 28px;
+        height: 28px;
+    }
+}
+
+.modal-header-re {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 1.2;
+    letter-spacing: -0.6px;
+    text-transform: uppercase;
+    margin-bottom: 32px;
+    width: 255px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .modal-header-re {
+        font-size: 24px;
+        line-height: 1.17;
+        letter-spacing: -0.72px;
+        text-transform: uppercase;
+        margin-bottom: 40px;
+        width: 298px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .modal-header-re {
+        font-size: 24px;
+        line-height: 1.17;
+        letter-spacing: -0.72px;
+        text-transform: uppercase;
+        margin-bottom: 40px;
+        width: 298px;
+    }
+}
+
+.form-modal-re {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-modal-details-re {
+    margin-bottom: 14px;
+}
+
+.input-modal-re {
+    border-radius: 8px;
+    border: 1.5px solid rgba(17, 17, 17, 0.05);
+    width: 100%;
+    height: 45px;
+    background-color: transparent;
+    outline: transparent;
+    padding-left: 18px;
+}
+
+.input-modal-re::placeholder,
+.textarea-re::placeholder {
+    color: rgba(64, 64, 64, 0.30);
+}
+
+.textarea-re {
+    resize: none;
+    border-radius: 8px;
+    border: 1.5px solid rgba(17, 17, 17, 0.05);
+    width: 100%;
+    height: 91px;
+    background-color: transparent;
+    outline: transparent;
+    padding: 14px 18px;
+}
+
+.form-modal-textarea-re {
+    margin-bottom: 18px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .form-modal-details-re {
+        margin-bottom: 18px;
+    }
+
+    .input-modal-re {
+        border-radius: 13px;
+        height: 66px;
+        padding-left: 24px;
+        font-size: 18px;
+        letter-spacing: -0.36px;
+    }
+
+    .textarea-re {
+        border-radius: 13px;
+        height: 137px;
+        padding: 22px 24px;
+        font-size: 18px;
+        letter-spacing: -0.36px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .form-modal-details-re {
+        margin-bottom: 18px;
+    }
+
+    .input-modal-re {
+        border-radius: 13px;
+        height: 66px;
+        padding-left: 24px;
+        font-size: 18px;
+        letter-spacing: -0.36px;
+    }
+
+    .textarea-re {
+        border-radius: 13px;
+        height: 137px;
+        padding: 22px 24px;
+        font-size: 18px;
+        letter-spacing: -0.36px;
+    }
+}
+
+.send-button-re {
+    cursor: pointer;
+    width: 93px;
+    height: 41px;
+    border-radius: 100px;
+    border: none;
+    background-color: var(--ACCENT);
+    color: var(--WHITE);
+    font-family: inherit;
+    font-weight: 600;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.send-button-re:hover,
+.send-button-re:focus {
+    background-color: var(--ACCENT-LIGH);
+    color: var(--ACCENT)
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .send-button-re {
+        width: 117px;
+        height: 45px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .send-button-re {
+        width: 117px;
+        height: 45px;
+    }
+}
+
+.form-field-re {
+    position: relative;
+}
+
+.flag-re {
+    position: absolute;
+    left: 18px;
+    top: 50%;
+    transform: translateY(-50%);
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    color: #000;
+    font-weight: 500;
+    width: 74px;
+    border-right: 1.5px solid rgba(64, 64, 64, 0.3);
+}
+
+.input-phone-re {
+    padding-left: 106px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .flag-re {
+        left: 24px;
+        gap: 18px;
+        font-size: 18px;
+        letter-spacing: -0.36px;
+        width: 125px;
+        border-right: 2.5px solid rgba(64, 64, 64, 0.3);
+    }
+
+    .input-phone-re {
+        padding-left: 177px;
+    }
+
+    .svg-modal-re {
+        width: 32px;
+        height: 24px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .flag-re {
+        left: 24px;
+        gap: 18px;
+        font-size: 18px;
+        letter-spacing: -0.36px;
+        width: 125px;
+        border-right: 2.5px solid rgba(64, 64, 64, 0.3);
+    }
+
+    .input-phone-re {
+        padding-left: 177px;
+    }
+
+    .svg-modal-re {
+        width: 32px;
+        height: 24px;
+    }
+}
+
+.svg-button-re {
+    fill: var(--DARK);
+}
+
+.svg-button-re:hover,
+.svg-button-re:focus {
+    fill: var(--ACCENT);
+}
